src-ken&y/objects/Invoice__c.object
<CustomObject>
    <customHelpPage>HelpIntercompanyInvoices</customHelpPage>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Total_Line_Amount__c  - Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to company</description>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Invoice Currency</relationshipLabel>
        <relationshipName>Invoice_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finalized hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_City__c</fullName>
        <label>From City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>From Company Invoices</relationshipLabel>
        <relationshipName>From_Company_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Country__c</fullName>
        <label>From Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_State__c</fullName>
        <label>From State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Street__c</fullName>
        <label>From Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>From_Zip_Code__c</fullName>
        <label>From Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <formula>Line_Exceptions_Count__c &gt; 0 || 
Exceptions_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Exceptions_Count__c</fullName>
        <label>Line Exceptions Count</label>
        <summaryFilterItems>
            <field>Invoice_Line__c.Has_Exceptions__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>To_City__c</fullName>
        <label>To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>To Company Invoices</relationshipLabel>
        <relationshipName>To_Company_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Country__c</fullName>
        <label>To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_State__c</fullName>
        <label>To State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Street__c</fullName>
        <label>To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>To_Zip_Code__c</fullName>
        <label>To Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Line_Amount__c</fullName>
        <label>Total Line Amount</label>
        <summarizedField>Invoice_Line__c.Extended_Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Lines__c</fullName>
        <label>Total Number of Lines</label>
        <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intercompany Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intercompany Investment</fullName>
                </value>
                <value>
                    <fullName>Intercompany Cross Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cant_unfinalize_paid_invoices</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Finalized__c ) &amp;&amp; Finalized__c == false &amp;&amp; Balance__c !=  Total_Line_Amount__c</errorConditionFormula>
        <errorMessage>Cannot unfinalize an invoice if it is partially/fully paid.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>From_Company_To_Company_Cant_Be_Same</fullName>
        <active>true</active>
        <description>from company and to company can not be same</description>
        <errorConditionFormula>From_Company__c ==  To_Company__c</errorConditionFormula>
        <errorMessage>The from and to company values cannot be the same. Correct one of your selections.</errorMessage>
    </validationRules>
</CustomObject>